infrastructure/kubernetes/portainer/portainer-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portainer
  namespace: portainer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: portainer-transport
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - portainer.k3s.milliways.fi
    secretName: portainer-tls
  rules:
  - host: portainer.k3s.milliways.fi
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portainer
            port:
              number: 9443
